--- a/index.html
+++ b/index.html
@@ -24,10 +24,13 @@
         <div class="main">
           <header class="navbar">
             <a href="" class="material-icons"> menu </a>
-            <a class="material-icons"> home </a>
+            <a href="" class="material-icons"> home </a>
             <a href="" class="material-icons"> search </a>
-            <a class="material-icons"> volume_up </a>
-            <a class="material-icons"> person </a>
+            <a href="" class="material-icons"> volume_up </a>
+            <a href="" class="material-icons"> person </a>
+            <a href="" class="material-icons"> graphic_eq </a>
+            <a href="" class="material-icons"> wb_cloudy </a>
+            <a href="" class="material-icons"> settings </a>
           </header>
 
           <div class="playlist">
