--- a/index.html
+++ b/index.html
@@ -27,8 +27,16 @@
           </div>
         </div>
         <div class="audio-control"></div>
+        <div class="audio-control-play">play_arrow</div>
+        <div class="audio-control-previous">previous</div>
+        <div class="audio-control-next">next</div>
+        <div class="audio-control-loop">loop</div>
+        <div class="audio-control-random">random</div>
       </div>
     </section>
-    <footer class="site-footer"></footer>
+    <div class="flex-item 1">
+      1. <span class="title"></span><span class="time_1"></span>
+    </div>
+    <script src="assets/js/audio_control.js"></script>
   </body>
 </html>
