--- a/index.html
+++ b/index.html
@@ -20,8 +20,29 @@
         <div class="main">
           <header class="navbar"></header>
           <div class="playlist">
-            <div class="playlist-name"></div>
-            <div class="playlist-list"></div>
+
+            <div class="playlist-name">
+              <div class="flex-container">
+                <div class="flex-item item-1">
+                  <img src="./assets/img/lofi_girl.jpg" alt="lofi girl">
+                </div>
+                <div class="flex-item item-2">
+                  <h1>Random Access Memories</h1></br>
+                  <p>Daft Punk</p></br>
+                  <p>2013•13 titres, 1h13</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="playlist-list">
+                <div class="flex-item 1">1. <span class="titre">Danisogen Mirror Lake</span><span class="time">2:50</span></div>
+                <div class="flex-item 2">2. <span class="titre">dontcry Jiro Dreams
+                </span><span class="time">1:46</span></div>
+                <div class="flex-item 3">3. <span class="titre">Contrasts Softy x Kaspa
+                </span><span class="time">2:51</span></div>
+                <div class="flex-item 4">4. <span class="titre">Wys Snowman</span><span class="time">3:15</span></div>
+            </div>
+
             <div class="playlist-empty-space"></div>
           </div>
         </div>
